--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
     <h1>Hello world</h1>
-    <h2>I'm changing the index</h2>
+    <h2>Click below</h2>
+    <a href="page1.html">My dog</a>
 </html>
