--- a/page1.html
+++ b/page1.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>My dog</title>
+        <link rel=stylesheet href="stylesheet.css">
     </head>
     <header>
         <h1>My dog</h1>
