--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html>
+    <head>
+        <link rel=stylesheet href="stylesheet.css">
+    </head>
+    <body>
     <h1>Hello world</h1>
     <h2>Click below</h2>
     <a href="page1.html">My dog</a>
+    </body>
 </html>
