--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
     <head>
+        <title>Hello World</title>
         <link rel=stylesheet href="stylesheet.css">
     </head>
     <body>
-    <h1>Hello world</h1>
-    <h2>Click below</h2>
-    <a href="page1.html">My dog</a>
+    <h1>Hello World</h1>
+    <h2>Click below to see my dog</h2>
+    <a href="page1.html">Next page</a>
     </body>
 </html>
