--- a/page1.html
+++ b/page1.html
@@ -13,5 +13,6 @@
         <p>My dog is a <b>black labrador</b>.</p>
         <p>My dog is between 9 and 10 years old.</p>
         <a href="https://www.google.com/">Google</a>
+        <a href="index.html">Hello World</a>
     </body>
 </html>
