--- a/page1.html
+++ b/page1.html
@@ -12,8 +12,8 @@
         <img style="padding:20px" src="ewok.jpg">
         <p>My dog is a <b>black labrador</b>.</p>
         <p>My dog is between 9 and 10 years old.</p>
-        <a href="https://www.google.com/">Google</a>
+        <a href="page2.html">Next page</a>
         <br>
-        <a href="index.html">Hello World</a>
+        <a href="index.html">Previous page</a>
     </body>
 </html>
