--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
         <title>Hello World</title>
         <link rel=stylesheet href="stylesheet.css">
     </head>
+    <header>
+       <h1>Hello World</h1> 
+    </header>
     <body>
-    <h1>Hello World</h1>
     <h2>Click below to see my dog</h2>
     <a href="page1.html">Next page</a>
     </body>
