--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
         <link rel=stylesheet href="stylesheet.css">
     </head>
     <header>
-       <h1>Hello World</h1> 
+        <div class="headerdiv">
+            <h1>Cormack's Site</h1>
+        </div>
     </header>
     <body>
-    <h2>Click below to see my dog</h2>
+    <h1>Hello World</h1>
+    <p>Click below to read about my dog</p>
     <a href="page1.html">Next page</a>
     </body>
 </html>
