--- a/page1.html
+++ b/page1.html
@@ -4,9 +4,12 @@
         <link rel=stylesheet href="stylesheet.css">
     </head>
     <header>
-        <h1>My dog</h1>
+        <div class="headerdiv">
+            <h1>Cormack's Site</h1>
+        </div>
     </header>
     <body>
+        <h1>My dog</h1>
         <p>My dog is named Paploo, after the ewok from Star Wars.</p>
         <p>My first dog was called Wicket, also after an ewok from Star Wars.</p>
         <img style="padding:20px" src="ewok.jpg">
