--- a/page2.html
+++ b/page2.html
@@ -3,8 +3,15 @@
         <title>The Last Page</title>
         <link rel=stylesheet href="stylesheet.css">
     </head>
+    <header>
+        <h1>
+            <form method="GET" action="action1.php">
+                <input type="text" name="user" value="Enter your name:">
+            </form>
+        </h1>
+    </header>
     <body>
-        <p><i>I<b> do not</b> kn</i>ow wh<b>at to<i> pu</i>t he</b>re.</p>
+        <p></p>
         <a href="page1.html">Previous Page</a>
     </body>
 </html>
