--- a/page2.html
+++ b/page2.html
@@ -4,13 +4,15 @@
         <link rel=stylesheet href="stylesheet.css">
     </head>
     <header>
-        <h1>
-            <form method="GET" action="action1.php">
-                <input type="text" name="user" value="Enter your name:">
-            </form>
-        </h1>
+        <div class="headerdiv">
+            <h2>Cormack's Site</h2>
+        </div>
     </header>
     <body>
+        <h1>Enter your name below</h1>
+        <form method="GET" action="action1.php">
+            <input type="text" name="user" value="Enter your name:">
+        </form>       
         <p></p>
         <a href="page1.html">Previous Page</a>
     </body>
