--- a/page2.html
+++ b/page2.html
@@ -12,6 +12,7 @@
         <h3>Enter your name below</h3>
         <form method="GET" action="action1.php">
             <input type="text" name="user" value="Enter your name:">
+            <input type="submit" value="Submit">
         </form>       
         <p></p>
         <a href="page1.html">Previous Page</a>
